@@ -33,6 +33,7 @@ version                 = 0.88
 ExtUtils::CChecker      = 0.10
 Module::Build           = 0.4004
 Module::Build::WithXSpp = 0.14
+Test::Compile           = v1.2.1
 Test::Requires          = 0.06
 
 [Meta::Dynamic::Config]
